# Raphael-AI

./: API-Reference.md  Pilot-Setup-Guide.md  README.md  SaMD-Validation.md  data_ingest.py  deploy_render.sh  example_patient.json  guideline_samples.jsonl  handsfree.html  index.html  main.js  main.py  manifest.json  package.json  popup.html  preload.js  pyproject.toml  render.yaml  renderer.js  requirements.txt  run_local.sh  voice_test.py
auth/: jwt_auth.py
compliance/: audit.py
corpus/: fetch.py  indexer.py  registry.py
eval/: eval_cases.json  run_eval.py
evidence/: ingest.py
feedback/: store.py
integrations/billing/: stripe_api.py
integrations/fhir/: smart.py
integrations/pacs/: dicom_local.py  dicomweb.py
pubmed/: classify.py  client.py  ingest.py  query_packs.py
radiology/: cant_miss.py  templates.py
rag/: chunking.py  citation_guard.py  embedder.py  llm.py  prompts.py  qdrant_store.py  responder.py  retriever.py  safety_gate.py  schemas.py
static/: Raphael.html  app.js  fhir-demo.html  handsfree.html  standard.html  styles.css
tenancy/: tenant.py
