[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raphael"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.120.2",
  "uvicorn==0.38.0",
  "httpx==0.28.1",
  "SQLAlchemy>=2.0.0",
  "openai==2.6.1",
  "python-multipart==0.0.20",
  "python-dotenv>=1.0.1",
]

[tool.uvicorn]
factory = false
