[tool.poetry]
name = "raphael-ai"
version = "0.1.0"
description = "Raphael clinical copilot"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.115.5"
uvicorn = {version = "0.31.1", extras = ["standard"]}
httpx = "0.27.2"
openai = "1.51.0"
SQLAlchemy = "2.0.36"
greenlet = "3.0.3"
aiofiles = "23.2.1"
python-multipart = "0.0.12"
pydantic = "2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
