[project]
name = "raphael-ai"
version = "0.1.0"
description = "Raphael API"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.120.4",
  "uvicorn[standard]==0.38.0",
  "openai==2.6.1",
  "httpx==0.28.1",
  "pydantic==2.12.3",
  "python-dotenv==1.2.1",
  "python-multipart==0.0.20",
  "PyYAML==6.0.3",
  "SQLAlchemy==2.0.35",
  "greenlet>=3.1.0"
]
